--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     }
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "node src/index.js",
     "test": "istanbul cover node_modules/.bin/_mocha test/*.js",
     "coveralls": "cat coverage/lcov.info | node_modules/.bin/coveralls"
   },
   "dependencies": {
     "bluebird": "^3.4.6",
     "chalk": "^1.1.3",
+    "command-line-args": "^4.0.1",
     "exectimer": "^2.0.2",
     "facebook-chat-api": "^1.2.0",
     "lodash": "^4.16.4"
