--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     }
   },
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node index.js",
     "test": "istanbul cover node_modules/.bin/_mocha test/*.js",
     "coveralls": "cat coverage/lcov.info | node_modules/.bin/coveralls"
   },
@@ -35,10 +35,11 @@
     "mongodb": "^2.2.22"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
+    "coveralls": "^2.11.15",
     "eslint": "^3.1.1",
     "eslint-config-xo-space": "^0.15.0",
-    "chai": "^3.5.0",
-    "coveralls": "^2.11.15",
     "istanbul": "^0.4.5",
     "mocha": "^3.1.2",
     "sinon": "^1.17.6"
