--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "coveralls": "cat coverage/lcov.info | node_modules/.bin/coveralls"
   },
   "dependencies": {
+    "blessed": "^0.1.81",
+    "blessed-contrib": "^4.7.5",
     "bluebird": "^3.4.6",
     "chalk": "^1.1.3",
     "command-line-args": "^4.0.1",
