--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bluebird": "^3.4.6",
     "chalk": "^1.1.3",
     "command-line-args": "^4.0.1",
+    "command-line-usage": "^4.0.0",
     "exectimer": "^2.0.2",
     "facebook-chat-api": "^1.2.0",
     "lodash": "^4.16.4",
